# LT_CAD

./: .gitignore  README.md  pyproject.toml
component_library/manifest/: catalogue_v0.json  schema.json  views_v0.json
component_library/raster/: catchbox.png.b64  extruder.png.b64  lt-family.png.b64  svr.png.b64  svs.png.b64
docs/: anchor_review.md  architecture.md  component_catalogue_v0.md  grid_layout.md
examples/layouts/: 1094811_a3_review.json
examples/projects/: 1094811_design_input.json
examples/quotations/: 1090052.json  1094811.json  drying_calculator_2025.json  labotek_studio_qt_2026-07-22.json
examples/topology/: simple_drying_line.json
master_library/: library_link.txt
rules/: layout_rules_v0.json  system_rules_v0.json
src/lt_cad/: __init__.py  anchors.py  baseline.py  grid.py  inventory.py  layout.py  proposal.py  quotation.py  render.py  review.py  routing.py  topology.py
tests/: test_1090052_proposal.py  test_anchors.py  test_baseline.py  test_catalogue.py  test_grid.py  test_labotek_studio_proposal.py  test_layout.py  test_proposal.py  test_quotation.py  test_review.py  test_routing.py  test_topology.py
